workspaces/optic-engine/src/commands/snapshots/optic_engine__commands__endpoint__test__can_handle_add_path_component__conflicting_path_result.snap
---
source: workspaces/optic-engine/src/commands/endpoint.rs
expression: conflicting_path_result.unwrap_err()
---
Validation(
    "Command failed validation: path component must not already exist, \"AddPathComponent(AddPathComponent { path_id: \\\"path_2\\\", parent_path_id: \\\"root\\\", name: \\\"todos\\\" })\"",
)
