workspaces/optic-engine/src/commands/snapshots/optic_engine__commands__endpoint__test__can_handle_add_path_component__unassignable_path_result.snap
---
source: workspaces/optic-engine-native/src/commands/endpoint.rs
expression: unassignable_path_result.unwrap_err()
---
Validation(
    "Command failed validation: path id must be assignable to add path component, \"AddPathComponent(AddPathComponent { path_id: \\\"path_1\\\", parent_path_id: \\\"root\\\", name: \\\"completed\\\" })\"",
)
